# KoiKoi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: Board.cpp  Board.hpp  CMakeLists.txt  Card.cpp  Card.hpp  CardStack.cpp  CardStack.hpp  Game.cpp  Game.hpp
res/: card.fs  card.vs  card_atlas.json
src/: Application.cpp  Application.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Card.cpp  Card.hpp  CardSprite.cpp  CardSprite.hpp  CardStack.cpp  CardStack.hpp  CardStackSprite.cpp  CardStackSprite.hpp  ObjectIDs.hpp  Window.cpp  Window.hpp  main.cpp
src/layers/: BoardLayer.cpp  BoardLayer.hpp  CardStackLayer.cpp  CardStackLayer.hpp
